update to use tube record

--- a/views/cats_controller/index.html.erb
+++ b/views/cats_controller/index.html.erb
@@ -6,7 +6,7 @@
 
 <ul>
   <% @cats.each do |cat| %>
-    <li><%= cat['name'] %> | Owned By: <%= cat['owner'] %></li>
+    <li><%= cat.name %> | Owned By: <%= cat.owner %></li>
   <% end %>
 </ul>
 
