update server to use one database for now

--- a/views/cats_controller/new.html.erb
+++ b/views/cats_controller/new.html.erb
@@ -1,3 +1,7 @@
+<% if flash['error'] %>
+  <p><%= flash['error'] %></p>
+<% end %>
+
 <form action="/cats" method="POST">
   <label>Name
     <input type="text" name="cat[name]" value="<%= @cat.name %>">
